--- a/Guia8/app/src/main/AndroidManifest.xml
+++ b/Guia8/app/src/main/AndroidManifest.xml
@@ -12,13 +12,26 @@
         android:theme="@style/Theme.Guia08App"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".AdaptadorPersona"
+            android:exported="false" />
+        <activity
+            android:name=".AddPersonaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".datos.Persona"
+            android:exported="false" />
+        <activity
+            android:name=".PersonasActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
         </activity>
     </application>
 
